--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "axios": "^0.15.3",
     "echarts": "^3.3.2",
     "element-ui": "^1.2.8",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "moment": "^2.20.1",
     "nprogress": "^0.2.0",
     "pinyin": "^2.8.3",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vuex": "^2.0.0-rc.6"
+    "vuex": "^2.0.0-rc.6",
+    "xlsx": "^0.13.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
